--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -466,6 +466,17 @@
                 </ul>
             </div>
             <div class="dw-list">
+                <h6 class="dw-list-title">Site</h6>
+                <ul>
+                    <li><a href="/">
+                            <div class="dw-icon-cont"><i class="bi bi-mortarboard"></i></div>Tutorials
+                        </a></li>
+                    <li><a href="/">
+                            <div class="dw-icon-cont"><i class="bi bi-newspaper"></i></div>News
+                        </a></li>
+                </ul>
+            </div>
+            <div class="dw-list">
                 <h6 class="dw-list-title">Settings</h6>
                 <ul>
                     <li><a href="/settings">
