--- a/OmneFictio.Web/wwwroot/css/chapter.css
+++ b/OmneFictio.Web/wwwroot/css/chapter.css
@@ -1,12 +1,6 @@
 main {
   width: 100%;
   color: var(--text-color1);
-  background-color: var(--background-color1);
-  border-bottom: 1px solid var(--background-color2);
-}
-
-.chapter-container {
-  padding: 10px;
 }
 
 .ch-header {
@@ -15,17 +9,20 @@ main {
   justify-content: space-between;
   gap: 18px;
   font-family: "Josefin Sans", sans-serif;
-  margin: 10px 0 22px;
+  margin-bottom: 14px;
+  padding: 10px 10px 14px;
+  border-bottom: 1px solid var(--background-color2);
+  background-color: var(--background-color1);
 }
 .ch-header .ch-options {
   display: flex;
   justify-content: space-between;
 }
-.ch-header .ch-options a,
-.ch-header .ch-options span {
+.ch-header .ch-options a {
   font-size: 1.2rem;
   text-decoration: underline;
   cursor: pointer;
+  padding-top: 2px;
 }
 .ch-header .ch-navigation {
   display: flex;
@@ -65,74 +62,79 @@ main {
   padding-left: 2px;
 }
 
-.ch-author_note {
+.chapter-cont {
+  display: flex;
+  flex-direction: column;
+  padding: 16px 10px 14px;
+  border-top: 1px solid var(--background-color2);
+  border-bottom: 1px solid var(--background-color2);
+  background-color: var(--background-color1);
+  margin-bottom: 14px;
+}
+.chapter-cont .ch-author_note {
   display: flex;
   flex-direction: column;
   margin-bottom: 26px;
 }
-.ch-author_note .note_caption {
+.chapter-cont .ch-author_note .note_caption {
   font-family: "Josefin Sans", sans-serif;
   font-size: 1.2rem;
 }
-.ch-author_note .authornote_body {
+.chapter-cont .ch-author_note .authornote_body {
   font-family: sans-serif;
   padding: 0 10px;
 }
-
-.ch-caption {
+.chapter-cont .ch-caption {
   display: flex;
   flex-direction: column;
   gap: 6px;
   margin-bottom: 16px;
   text-align: center;
 }
-.ch-caption h3 {
+.chapter-cont .ch-caption h3 {
   font-family: "Josefin Sans", sans-serif;
 }
-.ch-caption h5 {
+.chapter-cont .ch-caption h5 {
   font-family: "Itim", cursive;
 }
-
-.ch-end {
+.chapter-cont .ch-end {
   text-align: center;
   margin-bottom: 20px;
 }
-.ch-end span {
+.chapter-cont .ch-end span {
   font-family: "Itim", cursive;
 }
-
-.ch-footer {
+.chapter-cont .ch-footer {
   font-family: "Itim", cursive;
   display: flex;
   flex-flow: wrap;
   padding: 0 10px;
-  margin-bottom: 20px;
   justify-content: center;
   gap: 10px;
 }
-.ch-footer .ch-evaluation {
+.chapter-cont .ch-footer .ch-evaluation {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   color: var(--text-color2);
 }
-.ch-footer .ch-evaluation i {
+.chapter-cont .ch-footer .ch-evaluation i {
   font-size: 1.2rem;
   cursor: pointer;
   transition: color 0.2s ease;
 }
-.ch-footer .ch-evaluation .ch-likes {
+.chapter-cont .ch-footer .ch-evaluation .ch-likes {
   padding: 0 8px;
 }
-.ch-footer .ch-user {
+.chapter-cont .ch-footer .ch-user {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
   align-items: center;
   flex-shrink: 0;
 }
-.ch-footer .ch-user .ch-username {
+.chapter-cont .ch-footer .ch-user .ch-username {
   font-size: 0.8rem;
   cursor: pointer;
   margin-left: 8px;
@@ -142,35 +144,51 @@ main {
   overflow: hidden;
   max-width: 180px;
 }
-.ch-footer .ch-user .ch-username:hover {
+.chapter-cont .ch-footer .ch-user .ch-username:hover {
   text-decoration: underline;
 }
-.ch-footer .ch-user img {
+.chapter-cont .ch-footer .ch-user img {
   height: 1.7rem;
   width: 1.7rem;
   border-radius: 50%;
   cursor: pointer;
 }
 
-.ch-body {
+.chapter-cont .ch-body {
   margin-bottom: 16px;
   text-align: justify;
 }
-.ch-body p {
+.chapter-cont .ch-body p {
   margin-bottom: 12px;
+}
+
+.comment_section-cont {
+  padding: 14px 6px 10px;
+  background-color: var(--background-color1);
+  border-top: 1px solid var(--background-color2);
+  border-bottom: 1px solid var(--background-color2);
 }
 
 @media (min-width: 768px) {
   main {
-    border: 1px solid var(--background-color2);
-    border-radius: 4px;
     padding: 14px 20px;
-    margin-top: 14px;
   }
   .ch-header {
     flex-direction: row;
+    border-radius: 4px;
+    border: 1px solid var(--background-color2);
+    padding: 10px;
   }
   .ch-header > * {
     gap: 40px;
+  }
+  .chapter-cont {
+    border-radius: 4px;
+    border: 1px solid var(--background-color2);
+  }
+  .comment_section-cont {
+    border-radius: 4px;
+    border: 1px solid var(--background-color2);
+    padding: 16px 10px 10px;
   }
 }/*# sourceMappingURL=chapter.css.map */
