--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -153,7 +153,7 @@ header {
         flex-direction: row;
         justify-content: space-between;
         align-items: center;
-        padding: 4px 10px;
+        padding: 4px 18px 4px 10px;
         //height: 5.1rem;
     }
 }
@@ -170,6 +170,7 @@ header {
         text-shadow: 0px 0px 6px var(--text-boxshadow1);
         cursor: pointer;
         display: flex;
+        margin-left: -6px;
     }
 }
 
@@ -513,7 +514,6 @@ header {
     display: none;
     justify-content: center;
     align-items: center;
-    padding-left: 16px;
 
     span {
         font-size: 2rem;
@@ -610,7 +610,7 @@ header {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin: 0 16px 0 30px;
+    margin-left: 30px;
     position: relative;
 
     .account_btn-cont {
@@ -1060,6 +1060,8 @@ footer {
     background-color: var(--background-color1);
     color: var(--text-color1);
     border-top: 2px solid var(--background-color2);
+    word-break: break-word;
+    overflow: hidden;
 
     .footer-body {
         display: flex;
@@ -1220,7 +1222,7 @@ footer {
 
     header {
         .header-wrap {
-            padding: 10px;
+            padding: 6px 18px;
         }
 
         .searchbar-cont {
